[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wgscovplot"
dynamic = ["version"]
description = "Create interactive comparative sequencing coverage plots from virus sequencing data."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = []
authors = [
    { name = "Hai Hoang Nguyen", email = "hoanghai.nguyen@inspection.gc.ca" },
    { name = "Peter Kruczkiewicz", email = "peter.kruczkiewicz@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "typer",
    "rich",
    "pandas",
    'biopython',
    'bcbio-gff',
    'pydantic>=2.0.0',
    'jinja2',
    'edlib',
    'pysam',
]

[project.scripts]
wgscovplot = "wgscovplot.cli:app"

[project.urls]
Documentation = "https://github.com/CFIA-NCFAD/wgscovplot#readme"
Issues = "https://github.com/CFIA-NCFAD/wgscovplot/issues"
Source = "https://github.com/CFIA-NCFAD/wgscovplot"

[tool.hatch.version]
path = "wgscovplot/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "/tests",
    "/web/build/wgscovplot.js",
    "web/wgscovplot.html.j2",
]
exclude = [
    "*.ts",
    "*.tsx",
    "/web/data",
    "/tests",
]

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "/tests",
    "/web/build/wgscovplot.js",
    "web/wgscovplot.html.j2",
]
exclude = [
    "*.ts",
    "*.tsx",
    "/web/data",
    "/tests",
]

[tool.hatch.build.targets.wheel.sources]
"" = ""

[tool.hatch.build.hooks.custom]

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
    "hatchling",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --ignore-missing-imports --non-interactive {args:wgscovplot tests}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 120
[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow function call `typer.Option` in argument defaults
    "B008",
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow use of `datetime.datetime.utcnow()`
    "DTZ003",
    # Allow Boolean-typed positional argument in function definition
    "FBT001",
    "FBT002",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Ignore "Use `X | Y` for type annotations"
    "UP007",
    # Ignore "Import from `collections.abc` instead: `Iterable`, `Mapping`, `Callable`"
    "UP035",
    # Ignore "B905 [*] `zip()` without an explicit `strict=` parameter"
    "B905",
]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["wgscovplot"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["wgscovplot", "tests"]
branch = true
parallel = true
omit = [
    "wgscovplot/__about__.py",
]

[tool.coverage.paths]
wgscovplot = ["wgscovplot"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
